--- a/modules/configs/templates/replicated/replicated.conf
+++ b/modules/configs/templates/replicated/replicated.conf
@@ -8,6 +8,7 @@
 %{ endif ~}
     "DaemonAuthenticationType":          "password",
     "DaemonAuthenticationPassword":      "${console_password}",
+    "TlsBootstrapType":                  "self-signed",
     "BypassPreflightChecks":             true,
     "ImportSettingsFrom":                "/etc/replicated-ptfe.conf",
     "LicenseFileLocation":               "/etc/replicated.rli"
