--- a/modules/configs/templates/replicated/replicated-ptfe.conf
+++ b/modules/configs/templates/replicated/replicated-ptfe.conf
@@ -4,8 +4,12 @@
 %{ if installation_mode != "es" ~}
     },
     "installation_type": {
-        "value": "poc"
+        "value": "production"
     },
+    "production_type": {
+        "value": "internal"
+    },
+    }
      "enc_password": {
      "value": "${enc_password}"
 %{ else ~}
