Replace hard-coded example cert with instructions

--- a/examples/internal-load-balancer/files/csr.conf
+++ b/examples/internal-load-balancer/files/csr.conf
@@ -18,6 +18,4 @@ commonName                = Common Name (e.g. server FQDN or YOUR name)
 emailAddress              = Email Address
 
 [sans_list]
-DNS.1                     = tfeilb-primary-0
-DNS.2                     = tfeilb-primary-1
-DNS.3                     = tfeilb-primary-2
+DNS.1                     = tfe
