Expire gcloud SSH key

--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -290,6 +290,7 @@ jobs:
         run: |
           gcloud compute ssh \
           --quiet \
+          --ssh-key-expire-after="1440m" \
           --tunnel-through-iap \
           --zone="$INSTANCE_ZONE" \
           "$INSTANCE_NAME" \
