--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -502,7 +502,10 @@ jobs:
           --tunnel-through-iap \
           --zone="$INSTANCE_ZONE" \
           "$INSTANCE_NAME" \
-          -- -f -N -p 22 -D localhost:5000
+          -- \
+          -o 'ServerAliveInterval 5' \
+          -o 'ServerAliveCountMax 3' \
+          -f -N -p 22 -D localhost:5000
 
       - name: Wait For TFE
         id: wait-for-tfe
