Ignore all pem files

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,8 @@
 # .tfvars files
 *.tfvars
 
-# Examples
-examples/*/*.tfstate
-examples/*/*.tfstate.*
-examples/*/*.tfvars
-examples/**/*.pem
+# Key files
+*.pem
 
 .DS_Store
 
