Add terraform workspace select to workflows

--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -34,13 +34,18 @@ jobs:
         with:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN }}
-          terraform_version: 0.14.8
+          terraform_version: 1.0.11
           terraform_wrapper: true
 
       - name: Terraform Init
         id: init
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: terraform init -input=false -no-color
+
+      - name: Terraform Workspace Select
+        id: select
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        run: terraform workspace select ${{ github.event.issue.number }}
 
       - name: Terraform Destroy
         id: destroy
@@ -60,6 +65,8 @@ jobs:
             ${{ format(':link: [Action Summary Page]({0})', steps.vars.outputs.run-url) }}
 
             ${{ format('- {0} Terraform Init', steps.init.outcome == 'success' && ':white_check_mark:' || ':x:') }}
+
+            ${{ format('- {0} Terraform Select Workspace', steps.select.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
