Set module to GitHub ref
This is necessary as the transient workspaces have no working directory,
which means that the local working directory is assumed to be the root,
and no parent directories are uploaded, breaking the dependency on the
root module.

--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -30,6 +30,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
 
+      - name: Set Terraform Module Source
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        env:
+          REPO_FULL_NAME: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
+          REF: ${{ github.event.client_payload.pull_request.head.sha }}
+        run: sed --in-place='s/source = "..\/.."/source = "github.com\/$REPO_FULL_NAME?ref=$REF"/' main.tf
+
       # Checkout the hashicorp/tfe-load-test repository
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
