--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -29,6 +29,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
 
+      - name: Set Terraform Module Source
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        env:
+          REPO_FULL_NAME: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
+          REF: ${{ github.event.client_payload.pull_request.head.sha }}
+        run: sed --in-place='s/source = "..\/.."/source = "github.com\/$REPO_FULL_NAME?ref=$REF"/' main.tf
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
