--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -102,11 +102,12 @@ jobs:
           TFE_WORKSPACE: ${{ secrets.TFE_WORKSPACE }}
         run: |
           ip_address=$( dig +short @resolver1.opendns.com myip.opendns.com )
-          echo "$GOOGLE_CREDENTIALS" > google-credentials.json
           cat <<EOF > github.auto.tfvars
           iact_subnet_list = ["$ip_address/32"]
           google = {
-            credentials = "google-credentials.json"
+            credentials = <<-EOC
+            $GOOGLE_CREDENTIALS
+            EOC
             project     = "$GOOGLE_PROJECT"
             region      = "$GOOGLE_REGION"
             zone        = "$GOOGLE_ZONE"
