Add linting to fixtures

--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -54,6 +54,15 @@ jobs:
       run: |
         tflint --config ${{ github.workspace }}/.tflint.hcl ${{ github.workspace }}
 
+    - name: Lint fixtures directory in a loop
+      run: |
+        for m in $(ls -1d fixtures/*/)
+        do
+          tflint \
+            --config ${{ github.workspace }}/.tflint.hcl \
+            ${{ github.workspace }}/${m}
+        done
+
     - name: Lint modules directory in a loop
       run: |
         for m in $(ls -1d modules/*/)
