--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -37,7 +37,7 @@ jobs:
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
         run: |
           sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
-          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA//fixtures/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
@@ -265,7 +265,7 @@ jobs:
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
         run: |
           sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
-          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA//fixtures/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
@@ -526,7 +526,7 @@ jobs:
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
         run: |
           sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
-          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA//fixtures/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
