--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -34,7 +34,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -140,7 +142,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -247,7 +251,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
