--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -35,7 +35,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
@@ -261,7 +263,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
@@ -520,7 +524,9 @@ jobs:
           LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
           NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
           SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-        run: sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+        run: |
+          sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
+          sed --in-place "s/source = \"..\/..\/fixtures/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures?ref=$SHA/" main.tf
 
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
