--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -71,6 +71,7 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
           GOOGLE_REGION: ${{ secrets.GOOGLE_REGION }}
           GOOGLE_ZONE: ${{ secrets.GOOGLE_ZONE }}
+          GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
           TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
           TFE_ORGANIZATION: ${{ secrets.TFE_ORGANIZATION }}
           TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
@@ -78,12 +79,13 @@ jobs:
         run: |
           cat <<EOF > github.auto.tfvars
           google = {
-            credentials = <<-EOC
+            credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
-            project     = "$GOOGLE_PROJECT"
-            region      = "$GOOGLE_REGION"
-            zone        = "$GOOGLE_ZONE"
+            project         = "$GOOGLE_PROJECT"
+            region          = "$GOOGLE_REGION"
+            zone            = "$GOOGLE_ZONE"
+            service_account = "$GOOGLE_SERVICE_ACCOUNT"
           }
           tfe = {
             hostname     = "$TFE_HOSTNAME"
@@ -179,6 +181,7 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
           GOOGLE_REGION: ${{ secrets.GOOGLE_REGION }}
           GOOGLE_ZONE: ${{ secrets.GOOGLE_ZONE }}
+          GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
           TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
           TFE_ORGANIZATION: ${{ secrets.TFE_ORGANIZATION }}
           TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
@@ -186,12 +189,13 @@ jobs:
         run: |
           cat <<EOF > github.auto.tfvars
           google = {
-            credentials = <<-EOC
+            credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
-            project     = "$GOOGLE_PROJECT"
-            region      = "$GOOGLE_REGION"
-            zone        = "$GOOGLE_ZONE"
+            project         = "$GOOGLE_PROJECT"
+            region          = "$GOOGLE_REGION"
+            zone            = "$GOOGLE_ZONE"
+            service_account = "$GOOGLE_SERVICE_ACCOUNT"
           }
           tfe = {
             hostname     = "$TFE_HOSTNAME"
@@ -288,6 +292,7 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
           GOOGLE_REGION: ${{ secrets.GOOGLE_REGION }}
           GOOGLE_ZONE: ${{ secrets.GOOGLE_ZONE }}
+          GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
           TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
           TFE_ORGANIZATION: ${{ secrets.TFE_ORGANIZATION }}
           TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
@@ -295,12 +300,13 @@ jobs:
         run: |
           cat <<EOF > github.auto.tfvars
           google = {
-            credentials = <<-EOC
+            credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
-            project     = "$GOOGLE_PROJECT"
-            region      = "$GOOGLE_REGION"
-            zone        = "$GOOGLE_ZONE"
+            project         = "$GOOGLE_PROJECT"
+            region          = "$GOOGLE_REGION"
+            zone            = "$GOOGLE_ZONE"
+            service_account = "$GOOGLE_SERVICE_ACCOUNT"
           }
           tfe = {
             hostname     = "$TFE_HOSTNAME"
