example tf vars, fixture-secret and output

--- a/examples/external-dns/terraform.tfvars.example
+++ b/examples/external-dns/terraform.tfvars.example
@@ -1,7 +1,9 @@
-namespace=""
-license_secret=""
-fqdn=""
-ssl_certificate_name=""
-node_count=""
-dns_zone_name=""
-dns_create_record=""
+dns_create_record    = "true"
+node_count           = "value must be either 1 or 2"
+network              = "projects/xxxxxxx/global/networks/xxxxxxx"
+subnetwork           = "xxxxxxxxx"
+namespace            = "user-friendly-name"
+fqdn                 = "tfe.my.domain.com"
+ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxx"
+dns_zone_name        = "my.domain.com"
+license_file         = "/files/license.rli"
