--- a/examples/proxy/terraform.tfvars.example
+++ b/examples/proxy/terraform.tfvars.example
@@ -1,10 +1,10 @@
-namespace=""
-license_secret=""
-fqdn=""
-ssl_certificate_name=""
-node_count=""
-dns_zone_name=""
-network=""
-subnetwork=""
-ca_certificate_secret=""
-http_proxy_uri_authority=""
+ca_certificate_secret    = "xxxxxxxxxxxxxxx"
+http_proxy_uri_authority = "proxy_host_name:proxy_port"
+node_count               = "value must be either 1 or 2"
+network                  = "projects/xxxxxxx/global/networks/xxxxxxx"
+subnetwork               = "xxxxxxxxx"
+namespace                = "user-friendly-name"
+fqdn                     = "tfe.my.domain.com"
+ssl_certificate_name     = "certificate-name-xxxxxxxxxxxxxxxxxxxx"
+dns_zone_name            = "my.domain.com"
+license_file             = "/files/license.rli"
