--- a/examples/active-active/terraform.tfvars.example
+++ b/examples/active-active/terraform.tfvars.example
@@ -1,6 +1,6 @@
-namespace=""
-license_secret=""
-fqdn=""
-ssl_certificate_name=""
-node_count=""
-dns_zone_name=""
+node_count           = "2"
+namespace            = "user-friendly-name"
+fqdn                 = "tfe.my.domain.com"
+ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxx"
+dns_zone_name        = "my.domain.com"
+license_file         = "/files/license.rli"
