--- a/examples/existing-network/terraform.tfvars.example
+++ b/examples/existing-network/terraform.tfvars.example
@@ -1,8 +1,8 @@
-namespace=""
-license_secret=""
-fqdn=""
-ssl_certificate_name=""
-node_count=""
-dns_zone_name=""
-network=""
-subnetwork=""
+node_count           = "value must be either 1 or 2"
+network              = "projects/xxxxxxx/global/networks/xxxxxxx"
+subnetwork           = "xxxxxxxxx"
+namespace            = "user-friendly-name"
+fqdn                 = "tfe.my.domain.com"
+ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxx"
+dns_zone_name        = "my.domain.com"
+license_file         = "/files/license.rli"
