--- a/examples/proxy/terraform.tfvars.example
+++ b/examples/proxy/terraform.tfvars.example
@@ -1,5 +1,5 @@
 ca_certificate_secret    = "ca_certificate_secret_name"
-http_proxy_uri_authority = "proxy_host_name:proxy_port"
+http_proxy_uri_authority = "<host>:<port>"
 node_count               = 2 # value must be either 1 or 2
 network                  = "projects/<project_name>/global/networks/<network_name>"
 subnetwork               = "projects/<project_name>/regions/<region>/subnetworks/<subnetwork_name>"
