--- a/examples/external-dns/terraform.tfvars.example
+++ b/examples/external-dns/terraform.tfvars.example
@@ -1,5 +1,12 @@
 dns_create_record    = true
+dns_zone_name        = "my.domain.com"
 namespace            = "user-friendly-name"
 fqdn                 = "tfe.my.domain.com"
-dns_zone_name        = "my.domain.com"
+google               = {
+                       service_account = "google-service-account"
+                       credentials     = "1a2s3d4f1a2s1q2w4r5t61a2s3d4f1a2s3d4f5g"
+                       project         = "google-project-name"
+                       region          = "us-east1"
+                       zone            = "us-east1-b"
+                       }
 license_file         = "/files/license.rli"
