--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -117,7 +117,7 @@ jobs:
       - name: Terraform Validate
         id: validate
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform validate -no-color
+        run: terraform validate -no-color -var-file=github.auto.tfvars
 
       - name: Terraform Apply
         id: apply
@@ -344,7 +344,7 @@ jobs:
       - name: Terraform Validate
         id: validate
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform validate -no-color
+        run: terraform validate -no-color -var-file=github.auto.tfvars
 
       - name: Terraform Apply
         id: apply
@@ -606,7 +606,7 @@ jobs:
       - name: Terraform Validate
         id: validate
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform validate -no-color
+        run: terraform validate -no-color -var-file=github.auto.tfvars
 
       - name: Terraform Apply
         id: apply
