removed var-file (no longer valid)

--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -126,7 +126,7 @@ jobs:
           TFE_ORGANIZATION: ${{ secrets.TFE_ORGANIZATION }}
           TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
           TFE_WORKSPACE: ${{ secrets.TFE_WORKSPACE }}
-        run: terraform validate -no-color -var-file=github.auto.tfvars
+        run: terraform validate -no-color
 
       - name: Terraform Apply
         id: apply
@@ -634,7 +634,7 @@ jobs:
           TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
           TFE_WORKSPACE: ${{ secrets.TFE_WORKSPACE }}
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform validate -no-color -var-file=github.auto.tfvars
+        run: terraform validate -no-color
 
       - name: Terraform Apply
         id: apply
